--- a/main.css
+++ b/main.css
@@ -22,12 +22,13 @@ html, body {
   }
 
   .contact{
-   padding: 10px;
-    margin-top: 20px;
+    margin: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     color: white;
+    font-size: larger;
+  
   }
 
   .indexHeader{
