--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ html, body {
 
   .Indexbody {
     font-family: 'Lato', sans-serif;
-    background-image: url('https://p2.piqsels.com/preview/570/565/124/wood-forest-trunks-timber.jpg');
+    background-image: url('https://www.hsbygghandel.se/wp-content/uploads/2017/05/pexels-photo-172292.jpeg');
     background-position: center top;  
   
   }
