--- a/main.css
+++ b/main.css
@@ -15,6 +15,7 @@ html, body {
     height: 100%;
     display: flex;
     flex-direction: column;
+    background-color:rgb(229, 229, 229);
     /* background-repeat: no-repeat;
     background-attachment: fixed; */
   }
@@ -41,8 +42,8 @@ html, body {
   }
 
   .grayheader {
-    background-color: rgb(237, 237, 248);
-    background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/background.jpg');
+    background-color: rgb(229, 229, 229);
+    /*background-image: url('https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-3/background.jpg');*/
     background-position: center top;
     background-size: cover;
     color: #204156;
